--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #a3dbe1;
+            background-color: #ffffff;
             text-align: center;
         }
         .scene {
