--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>賭け事ゲーム & 株式市場</title>
+    <title>火事のカジノ</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -73,6 +73,7 @@
         }
     </style>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+     <h3>made by kiku-kick</h3>
 </head>
 <body>
 
