--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
     <div id="horse-racing" class="scene">
         <h1>競馬場</h1>
         <p>馬を選んで賭け金を入力してください</p>
+        <p>画像入れてなーーーーーいYo</p>
         <div id="horse-list">
             <div class="horse">
                 <input type="radio" name="horse" value="1" id="horse-1">
@@ -149,6 +150,8 @@
     <div id="roulette" class="scene">
         <h1>ルーレット</h1>
         <p>ルーレットの数字を選んで賭け金を入力してください</p>
+        <p>まだ作ってなーーーーーいYo</p>
+        <p>いつか更新する</p>
         <input type="number" id="roulette-number" placeholder="数字を選択 (0-36)" min="0" max="36">
         <input type="number" id="roulette-bet" placeholder="賭け金を入力" min="1">
         <button class="button" id="spin-roulette">ルーレットを回す</button>
@@ -160,6 +163,8 @@
     <div id="slot-machine" class="scene">
         <h1>スロットマシン</h1>
         <p>スロットを回すための賭け金を入力してください</p>
+        <p>まだ作ってなーーーーーいYo</p>
+        <p>いつか更新する</p>
         <input type="number" id="slot-bet" placeholder="賭け金を入力" min="1">
         <button class="button" id="spin-slot">スロットを回す</button>
         <p id="slot-result"></p>
