--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <!-- Main Menu -->
     <div id="main-menu" class="scene visible">
         <h1>所持金: <span id="current-money-main">0</span> 円</h1>
-        <h3>不定期更新-更新時更新時ラグクなるのは、知らん</h3>
+        <h3>不定期更新-更新時ラグクなるのは、知らん</h3>
         <button class="button" id="go-horse-race">競馬場に向かう</button>
         <button class="button" id="go-roulette">ルーレットを回す</button>
         <button class="button" id="go-slot">スロットを回しに行く</button>
