--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     <div id="roulette" class="scene">
         <h1>ルーレット</h1>
         <p>ルーレットの数字を選んで賭け金を入力してください</p>
-        <p>まだ作ってなーーーーーいYo</p>
+        <p>まだ細かいのは作ってなーーーーーいYo</p>
         <p>いつか更新する</p>
         <input type="number" id="roulette-number" placeholder="数字を選択 (0-36)" min="0" max="36">
         <input type="number" id="roulette-bet" placeholder="賭け金を入力" min="1">
@@ -163,7 +163,7 @@
     <div id="slot-machine" class="scene">
         <h1>スロットマシン</h1>
         <p>スロットを回すための賭け金を入力してください</p>
-        <p>まだ作ってなーーーーーいYo</p>
+        <p>まだ細かいのは作ってなーーーーーいYo</p>
         <p>いつか更新する</p>
         <input type="number" id="slot-bet" placeholder="賭け金を入力" min="1">
         <button class="button" id="spin-slot">スロットを回す</button>
