--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         .horse-track {
             width: 100%;
             height: 100px;
-            background-color: #f5f5f5;
+            background-color: #23ac38;
             border: 1px solid #ccc;
             position: relative;
             margin: 20px 0;
